# active-source-seeking

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_paper_example.py
active_source_seeking/: __init__.py  active_sensing.py  apf.py  central_controller.py  currents.py  exact_fim.py  fe_impf.py  fem_advection_diffusion.py  fem_sampling_p1.py  linalg_utils.py  meshio_utils.py  pf_utils.py  source_model.py
mesh/: bay_port_island.geo  bay_port_island.msh
